moved the assets to public folder and change all the images paths

--- a/src/project.json
+++ b/src/project.json
@@ -2,7 +2,7 @@
     {
         "id": 1,
         "name": "Better Nutrient",
-        "images": "https://drive.google.com/file/d/1eZEBLhh2ptMKjXXa7VmSbK1ZRU0bmG3l/view?usp=share_link ",
+        "images": "./assets/images/Better_nutrient.png",
         "description": "Better nutrient is a single web application that only the user to view the basic nutrient and recipe for any food of choice. ",
         "github": "https://github.com/preshy59/better_nutrient",
         "deployedUrl": "https://preshy59.github.io/better_nutrient/"
@@ -11,7 +11,7 @@
     {
         "id": 2,
         "name": "5-Days Weather Forcast",
-        "images": "(./assets/images/weather_forcast.png)",
+        "images": "./assets/images/weather_forcast.png",
         "description": "The 5-Days Weather Forcast Dashboard is a user friendly single page web application that displays the weather forecast of a city. ",
        "github": "https://github.com/preshy59/weather_dashboard",
         "deployedUrl": "https://preshy59.github.io/weather_dashboard/"
@@ -20,7 +20,7 @@
     {
         "id": 3,
         "name": "Team Profile",
-       "images": " https://drive.google.com/file/d/1FCPDFJJrI9eV_BQ91B3h4OvLhpTiWN_a/view?usp=share_link",
+       "images": "./assets/images/Team_Profile.png",
         "description": "Team Profile is a command-line application that generate information about employees on a software engineering team using node.js ",
         "github": "https://github.com/preshy59/team_profile_generator",
         "deployedUrl": "https://github.com/preshy59/team_profile_generator"
@@ -29,7 +29,7 @@
     {
         "id": 4,
        "name": "Prebel Collection",
-        "images": "https://drive.google.com/file/d/1TbGcMhdZoCOr2a-ge24_tFWotpLBjump/view?usp=share_link",
+        "images": "./assets/images/Prebel_collection.png",
         "description": "Prebel collection is a one stop online fashion store that deals on different apparels of any kind.",
         "github": "https://github.com/preshy59/prebel_collection",
         "deployedUrl": "https://preshy59.github.io/prebel_collection/"
